argocd/manifests/quartz/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: quartz
  namespace: quartz
spec:
  selector:
    app: quartz
  ports:
    - name: http
      port: 80
      targetPort: 80
